# Tasks

./: .gitignore  CMakeLists.txt  hometask-push.sh
tests/cmake_modules/: AddGMock.cmake
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/src/: maintest.cpp
